-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P3
-
Affects Version/s: 7u40
-
Component/s: hotspot
-
b09
-
Not verified
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8035442 | 7u80 | Andrew Hughes | P3 | Closed | Fixed | b01 |
| JDK-8060847 | 7u79 | Andrew Hughes | P3 | Resolved | Fixed | b01 |
| JDK-8057280 | 7u76 | Andrew Hughes | P3 | Resolved | Fixed | b01 |
| JDK-8036651 | 7u65 | Andrew Hughes | P3 | Closed | Fixed | b02 |
Reported by Andrew on jdk7u-dev mailing list :
===
It appears that Zero is broken in u40 by 8016131. How do I go about getting
this fix [1] into the u40 branch? Is that possible?
[0] http://mail.openjdk.java.net/pipermail/jdk7u-dev/2013-August/007592.html
[1] http://icedtea.classpath.org/hg/release/icedtea7-forest-2.4/hotspot/rev/09f439dfd7b9
===
http://mail.openjdk.java.net/pipermail/jdk7u-dev/2013-September/007680.html
===
It appears that Zero is broken in u40 by 8016131. How do I go about getting
this fix [1] into the u40 branch? Is that possible?
[0] http://mail.openjdk.java.net/pipermail/jdk7u-dev/2013-August/007592.html
[1] http://icedtea.classpath.org/hg/release/icedtea7-forest-2.4/hotspot/rev/09f439dfd7b9
===
http://mail.openjdk.java.net/pipermail/jdk7u-dev/2013-September/007680.html
- backported by
-
JDK-8057280 7141246 & 8016131 break Zero port
-
- Resolved
-
-
JDK-8060847 7141246 & 8016131 break Zero port
-
- Resolved
-
-
JDK-8035442 7141246 & 8016131 break Zero port
-
- Closed
-
-
JDK-8036651 7141246 & 8016131 break Zero port
-
- Closed
-
- relates to
-
JDK-8022188 Make zero compile after 8016131 and 8016697
-
- Closed
-
-
JDK-8016131 nsk/sysdict/vm/stress/chain tests crash the VM in 'entry_frame_is_first()'
-
- Closed
-
(1 relates to)