8024648: 7141246 & 8016131 break Zero port Reviewed-by: dholmes, coleenp